# TheTeam

./: README.md  client.py  config.py  config.yaml  cut.py  main.py  mbot.py  pyproject.toml  server.py
client/: app.py  dashboard.py  ros2_gateway.py
common/: messages.py  webrtc_transport.py
robot/: app.py
server/: app.py  segmentation.py
vision/: tracking.py  visualization.py
